--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
     <li>
       <strong><%= user.name %></strong>
       <% unless current_user == user %>
-        <%= link_to 'Send message', new_message_path(to: user.id), class: 'btn btn-default btn-sm' %>
+        <%= link_to "Destroy", user_path(user), method: :delete, data: { confirm: "You sure?" } %>
       <% end %>
     </li>
   <% end %>
